==> ElrohirGT/RODOS-PortentaH7/rodos/src/bare-metal/stm32h7/hal/hal_i2c.cpp <==
#include <new>
#include "hal/hal_i2c.h"
#include "rodos.h"
#include "timemodel.h"
#include "hal/hw_hal_i2c.h" // bare-metal/stm32f4/hal
#include "stm32f4xx_rcc.h"
#include "stm32f4xx_gpio.h"
#include "stm32f4xx_i2c.h"
#include "hw_hal_gpio.h"
#define I2C_TIMEOUT_IN_NS  		(2*MILLISECONDS)
#define I2C_LONG_TIMEOUT_IN_NS  	(10*MILLISECONDS)

int32_t HAL_I2C::init(uint32_t speed) {
    /* Reset I2C module */
    reset();

    RODOS_ASSERT_IFNOT_RETURN((speed > 0 && speed <= 20000000), -1);

	context->I2C_SPEED = speed;

	/* enable peripheral clock for I2C module */
	RCC_APB1PeriphClockCmd(context->I2C_CLK, ENABLE);

	/* enable peripheral clock for I2C GPIOs */
	RCC_AHB1PeriphClockCmd(context->I2C_SCL_GPIO_CLK | context->I2C_SDA_GPIO_CLK, ENABLE);

	/* GPIO configuration */
	/* Connect PXx to I2C_SCL*/
	GPIO_PinAFConfig(context->I2C_SCL_GPIO_PORT, context->I2C_SCL_SOURCE, context->I2C_AF);
	/* Connect PXx to I2C_SDA*/
	GPIO_PinAFConfig(context->I2C_SDA_GPIO_PORT, context->I2C_SDA_SOURCE, context->I2C_AF);

	/* Configure I2C pin: SCL */
	GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_InitStructure.GPIO_Pin = context->I2C_SCL_PIN;
	GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
	//GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;
	GPIO_Init(context->I2C_SCL_GPIO_PORT, &GPIO_InitStructure);

	/* Configure I2C pin: SDA */
	GPIO_InitStructure.GPIO_Pin = context->I2C_SDA_PIN;
	GPIO_Init(context->I2C_SDA_GPIO_PORT, &GPIO_InitStructure);

	/* I2C configuration */
    I2C_InitTypeDef I2C_InitStructure;
	I2C_InitStructure.I2C_Mode = I2C_Mode_I2C;
	I2C_InitStructure.I2C_DutyCycle = I2C_DutyCycle_2;
	I2C_InitStructure.I2C_OwnAddress1 = context->I2C_SLAVE_ADDRESS7;
	I2C_InitStructure.I2C_Ack = I2C_Ack_Enable;
	I2C_InitStructure.I2C_AcknowledgedAddress = I2C_AcknowledgedAddress_7bit;
	I2C_InitStructure.I2C_ClockSpeed = context->I2C_SPEED;
	I2C_Init(context->I2Cx, &I2C_InitStructure);

	/* I2C module Enable */
	I2C_Cmd(context->I2Cx, ENABLE);

	return 0;
}

void HAL_I2C::reset() {
    I2C_Cmd(context->I2Cx, DISABLE);
    I2C_DeInit(context->I2Cx);
    RCC_APB1PeriphClockCmd(context->I2C_CLK, DISABLE);


    GPIO_InitTypeDef GPIO_InitStructure;
	GPIO_StructInit(&GPIO_InitStructure);
    GPIO_InitStructure.GPIO_Pin = context->I2C_SCL_PIN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_2MHz;
	GPIO_InitStructure.GPIO_OType = GPIO_OType_OD;
	//GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_UP;
	GPIO_InitStructure.GPIO_PuPd = GPIO_PuPd_NOPULL;


    GPIO_SetBits(context->I2C_SCL_GPIO_PORT,context->I2C_SCL_PIN);
    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_OUT;
    GPIO_Init(context->I2C_SCL_GPIO_PORT, &GPIO_InitStructure);

    if(isSchedulerRunning()){
    	Thread::suspendCallerUntil(NOW()+1*MILLISECONDS);

    	for(int i=0;i<8;i++){
			GPIO_ResetBits(context->I2C_SCL_GPIO_PORT,context->I2C_SCL_PIN);
			Thread::suspendCallerUntil(NOW()+1*MILLISECONDS);
			GPIO_SetBits(context->I2C_SCL_GPIO_PORT,context->I2C_SCL_PIN);
			Thread::suspendCallerUntil(NOW()+1*MILLISECONDS);
    	}
    }

    GPIO_InitStructure.GPIO_Mode = GPIO_Mode_IN;
    GPIO_Init(context->I2C_SCL_GPIO_PORT, &GPIO_InitStructure);

    GPIO_InitStructure.GPIO_Pin = context->I2C_SDA_PIN;
    GPIO_Init(context->I2C_SDA_GPIO_PORT, &GPIO_InitStructure);

    GPIO_ResetBits(context->I2C_SCL_GPIO_PORT,context->I2C_SCL_PIN);
}

int32_t HAL_I2C::read(const uint8_t addr, uint8_t* rxBuf, uint32_t rxBufSize) {
	if (rxBufSize == 0) return 0;

	if (context->IsMaster) {
		int32_t retVal = context->mstrRead(addr,rxBuf,rxBufSize);
	    upCallReadFinished();
	    return retVal;
	} else {
	    upCallReadFinished();
		return HAL_I2C_ERR_NOT_MASTER;
	}
}

int32_t HAL_I2C::writeRead(const uint8_t addr, const uint8_t* txBuf, uint32_t txBufSize, uint8_t* rxBuf, uint32_t rxBufSize) {
	int32_t txRetVal = 0;
	int32_t rxRetVal = 0;

	if (context->IsMaster){
		txRetVal = context->mstrWriteNoStop(addr, txBuf, txBufSize);
		if (txRetVal < 0) {
		    upCallReadFinished();
			return txRetVal;
		}

		/* send Re-Start  */
		I2C_GenerateSTART(context->I2Cx, ENABLE);

		/* Test on EV5 and clear it */
		TTime startTime = NOW();
		while (I2C_CheckEvent(context->I2Cx, I2C_EVENT_MASTER_MODE_SELECT) != SUCCESS) {
			if ((NOW()-startTime) > I2C_TIMEOUT_IN_NS){
			    upCallReadFinished();
				return HAL_I2C_ERR_START;
			}
		}

		rxRetVal = context->mstrReadNoStart(addr, rxBuf, rxBufSize);
		if (rxRetVal < 0) {
		    upCallReadFinished();
			return rxRetVal;
		}
	}else{
	    upCallReadFinished();
		return HAL_I2C_ERR_NOT_MASTER;
	}

	upCallReadFinished();
	return rxRetVal;
}

void HW_HAL_I2C::initMembers([[gnu::unused]] HAL_I2C* halI2C, I2C_IDX i2cIdx, GPIO_PIN sclPin, GPIO_PIN sdaPin){
  IsMaster = true;
  switch(i2cIdx) {
  case I2C_IDX1:
    I2Cx = I2C1;
		I2C_CLK = RCC_APB1Periph_I2C1;
		I2C_AF = GPIO_AF_I2C1;
    break;
  case I2C_IDX2:
    I2Cx = I2C2;
		I2C_CLK = RCC_APB1Periph_I2C2;
		I2C_AF = GPIO_AF_I2C2;
    break;
  case I2C_IDX3:
		I2Cx = I2C3;
		I2C_CLK = RCC_APB1Periph_I2C3;
		I2C_AF = GPIO_AF_I2C3;
    break;
  default:
		break;
  }
  /* SCL pin config */
  I2C_SCL_GPIO_PORT = HW_HAL_GPIO::getSTM32Port(sclPin);
  I2C_SCL_GPIO_CLK = HW_HAL_GPIO::getRCC_APB1Periph_GPIOx(I2C_SCL_GPIO_PORT);
  I2C_SCL_PIN = HW_HAL_GPIO::getSTM32Pin(sclPin);
  I2C_SCL_SOURCE = HW_HAL_GPIO::getGPIO_PinSource(I2C_SCL_PIN);

  /* SDA pin config */
  I2C_SDA_GPIO_PORT = HW_HAL_GPIO::getSTM32Port(sdaPin);
  I2C_SDA_GPIO_CLK = HW_HAL_GPIO::getRCC_APB1Periph_GPIOx(I2C_SDA_GPIO_PORT);
  I2C_SDA_PIN = HW_HAL_GPIO::getSTM32Pin(sdaPin);
  I2C_SDA_SOURCE = HW_HAL_GPIO::getGPIO_PinSource(I2C_SDA_PIN);


}
